--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.cc.retrofitdemo">
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -17,8 +19,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".designmode.DesignModeActivity"/>
-        <activity android:name=".navigation.NavigationActivity"/>
+        <activity android:name=".designmode.DesignModeActivity" />
+        <activity android:name=".navigation.NavigationActivity" />
+        <activity android:name=".musicplayer.MusicPlayerActivity" />
+
+        <service
+            android:name=".musicplayer.service.MusicService"
+            android:enabled="true"
+            tools:ignore="ExportedService">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
     </application>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
