--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,14 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    android {
+        repositories {
+            flatDir {
+                dirs 'libs'
+            }
+        }
+    }
 }
-
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
